data/derived/comb/progs/unify/prog5359.ml.out
Characters 71-92:
  (10*o, bigAdd(mulByDigit (o*x l1)) l)
               ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int list
